--- a/lect01/src/App.css
+++ b/lect01/src/App.css
@@ -2,8 +2,6 @@
   display: flex;
   flex-direction: column;
 
-  margin-left: 10px;
-  margin-bottom: 10px;
-
   align-items: center;
+  justify-content: center;
 }
