--- a/lect01/src/components/completed-form/CompletedForm.styles.css
+++ b/lect01/src/components/completed-form/CompletedForm.styles.css
@@ -1,38 +1,34 @@
 .completedForm {
   display: flex;
   flex-direction: column;
-  gap: 5px;
   justify-content: space-between;
+  gap: 5px;
 
-  max-width: 70vw;
-  /* min-height: 70vh; */
+  max-width: 80vw;
 
-  padding: 10px;
+  padding: 5px;
+  margin-bottom: 20px;
 
   background-color: rgba(245, 222, 179, 0.352);
 }
 
 .fieldsContainer {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-
+  display: grid;
+  grid-template-columns: 150px 1fr;
   border: 1px solid black;
+
+  max-width: 70vw;
 
   margin: 5px;
   padding: 5px;
 
-  justify-content: space-between;
   align-items: center;
 }
 .fieldName {
-  display: flex;
+  font-weight: bold;
+  flex-wrap: wrap;
 }
 .fieldValue {
-  display: block;
-  flex-direction: column;
-
-  max-width: 70%;
-
-  word-wrap: break-word;
+  max-width: 50vw;
+  overflow-wrap: break-word;
 }
