--- a/lect01/src/components/form/Form.styles.css
+++ b/lect01/src/components/form/Form.styles.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   gap: 5px;
 
-  margin: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
 
   background-color: rgba(245, 222, 179, 0.352);
 }
