--- a/lect01/src/components/header/Header.css
+++ b/lect01/src/components/header/Header.css
@@ -1,5 +1,15 @@
 .header {
+  display: grid;
+  grid-template-columns: auto;
+  max-width: 80vw;
+
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 150%;
+
   color: rgba(0, 0, 0, 0.5);
+}
+
+.headerField {
+  max-width: 80vw;
+  overflow-wrap: break-word;
 }
