--- a/lect01/src/components/completed-form/CompletedForm.styles.css
+++ b/lect01/src/components/completed-form/CompletedForm.styles.css
@@ -32,3 +32,19 @@
   max-width: 50vw;
   overflow-wrap: break-word;
 }
+
+.link {
+  text-decoration: none;
+  color: black;
+
+  font-size: larger;
+  background-color: rgba(245, 222, 179, 0.352);
+
+  border: 1px solid black;
+  text-align: center;
+
+  border-radius: 10px;
+}
+.link:hover {
+  background-color: rgba(245, 222, 179, 0.685);
+}
